kustomization/overlays/prod/ara/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: ara-ingress
spec:
  rules:
    - host: ara.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: ara-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
